SinkModel: Ignore virtual sinks for preferredSink

Preferred sink is used for volume control with media keys,
so it should be controlling real hardware volume instead of
virtual devices.

BUG: 395466
FIXED-IN: 5.13.1

Differential Revision: https://phabricator.kde.org/D13568